# voice-transcribe

./: README.md  install.sh  pyproject.toml  setup_autostart.sh  uninstall.sh  voice_transcribe.py
